Bug 1102052 - Crash for PBackground protocol errors, r=mrbkap, a=lsblakk.