ipc/glue/BackgroundChildImpl.h
@@ -41,6 +41,9 @@ protected:
   virtual ~BackgroundChildImpl();
 
   virtual void
+  ProcessingError(Result aWhat) MOZ_OVERRIDE;
+
+  virtual void
   ActorDestroy(ActorDestroyReason aWhy) MOZ_OVERRIDE;
 
   virtual PBackgroundTestChild*
